--- a/crud_anidado/app/views/categories/index.html.erb
+++ b/crud_anidado/app/views/categories/index.html.erb
@@ -10,10 +10,10 @@
   </thead>
 
   <tbody>
-    <% @categories.each do |category| %>
+    <% @categories.each.with_index(1) do |category, index| %>
       <tr>
         <td><%= link_to category.name, category %></td>
-        <td><%= @conteo %></td>
+        <td><%= @conteo[index] %></td>
         <td><%= link_to 'Show', category, class: 'btn btn-default' %></td>
         <td><%= link_to 'Edit', edit_category_path(category), class: 'btn btn-primary' %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-warning' %></td>
